crush, osd: handle multiple parents properly when applying pg upmaps

Fixes: http://tracker.ceph.com/issues/23921
Signed-off-by: xiexingguo <xie.xingguo@gmail.com>
(cherry picked from commit 482ec97c98107be20c9ca1f34636323703ecfa5c)

Conflicts:
	src/crush/CrushWrapper.h : Resolved for get_children_of_type